--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,19 +1,16 @@
 <section class="container container-about">
     <div class="row">
         <div class="col-md-12">
-            <h1>About</h1>
+            <h1>s关于此网站</h1>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est diam, porttitor et arcu at, vehicula
-                sodales libero. Sed fermentum luctus dapibus. Proin lobortis ipsum eu lobortis luctus.
+                主要目的是记录我的儿子的成长历程，方便分享给亲朋好友们。
             </p>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
-                Donec elementum orci dui, eu euismod sem pellentesque sit amet. Nunc tempus consequat urna, vel
-                consectetur odio mattis id. Nam nisi sem, tincidunt id risus et, auctor lacinia nulla. In hac habitasse
-                platea dictumst.
+                此网站内容为个人所有，禁止非法传播。
             </p>
         </div>
     </div>
