--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -6,13 +6,13 @@
             </div>
             <div class="col-md-6 col-sm-12 container-contacts-phone">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <a href="mailto:{{ site.email }}">
+                <a href="mailto:shenweiqi1987@163.com">
                     shenweiqi1987@163.com
                 </a>
             </div>
             <div class="col-md-6 col-sm-12 container-contacts-phone">
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                <a href="tel:{{ site.phone }}">
+                <a href="tel:13524847260">
                     {{ 13524847260 }}
                 </a>
             </div>
