--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ site.brand }} - {{ site.title }}</title>
+    <title>沈瑞尧 - 2018年12月12日，男，射手座</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     {% if site.meta_author %}
