--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section class="container container-about">
     <div class="row">
         <div class="col-md-12">
-            <h1>s关于此网站</h1>
+            <h1>关于此网站</h1>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
