--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,10 +3,10 @@
         <col-md-12>
             <img src="./web-dist/images/profile-image.jpg" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
             <h1 class="container-top-name">
-                {{ site.brand }}
+                沈瑞尧
             </h1>
             <h2 class="container-top-headline">
-                {{ site.headline }}
+                2018年12月12日，男，射手座
             </h2>
         </col-md-12>
     </div>
