modify first img

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,7 +1,7 @@
 <header class="container-fluid container-top">
     <div class="row">
         <col-md-12>
-            <img src="https://wesleyshen.github.io/1.jpg" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
+            <img src="https://wesleyshen.github.io/1.JPG" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
             <h1 class="container-top-name">
                 沈瑞尧
             </h1>
