--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -6,7 +6,7 @@
         <div class="col-md-12">
             <!-- Generate such a widget at snapwidget.com for your name -->
             <!-- Copy/paste code here or just update the snapwidget value at _config.yml -->
-            <script src="https://wesleyshen.github.io/1.jpg"></script>
+            <script src="https://wesleyshen.github.io/1.JPG"></script>
             <iframe src="https://snapwidget.com/embed/{{ site.snapwidget }}" class="snapwidget-widget" allowTransparency="true"
                     frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
         </div>
