--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -6,9 +6,8 @@
         <div class="col-md-12">
             <!-- Generate such a widget at snapwidget.com for your name -->
             <!-- Copy/paste code here or just update the snapwidget value at _config.yml -->
-           <img src="https://wesleyshen.github.io/1.JPG" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
-            <img src="https://wesleyshen.github.io/2.JPG" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
-            
+           <img src="https://wesleyshen.github.io/1.JPG" >
+            <img src="https://wesleyshen.github.io/2.JPG" >            
             frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
         </div>
     </div>
