--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -7,6 +7,7 @@
             <!-- Generate such a widget at snapwidget.com for your name -->
             <!-- Copy/paste code here or just update the snapwidget value at _config.yml -->
             <img id="img" onmouseover="bigger()" onmouseout="smaller()" src="wesleyshen.github.io/1.JPG" style="width:100px;height:100px;" />
+            <img id="img" onmouseover="bigger()" onmouseout="smaller()" src="wesleyshen.github.io/2.JPG" style="width:100px;height:100px;" />
             
             <script type="text/javascript">
                 
