--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -4,20 +4,11 @@
             <h1>相册</h1>
         </div>
         <div class="col-md-12">
-            <!-- Generate such a widget at snapwidget.com for your name -->
-            <!-- Copy/paste code here or just update the snapwidget value at _config.yml -->
-            <img id="img" onmouseover="bigger()" onmouseout="smaller()" src="wesleyshen.github.io/1.JPG" style="width:100px;height:100px;" />
-            <img id="img" onmouseover="bigger()" onmouseout="smaller()" src="wesleyshen.github.io/2.JPG" style="width:100px;height:100px;" />
-            
-            <script type="text/javascript">
-                
-                var img = document.getElementById('img');
-                
-                function bigger(){  img.style.width = '400px';  img.style.height = '400px'; }
-                
-                function smaller(){  img.style.width = '100px';  img.style.height = '100px'; }
-                
-                </script>
+            <img src="wesleyshen.github.io/1.JPG" width=“100“ height=”100">
+<br />
+            <img src="wesleyshen.github.io/2.JPG" width=“100“ height=”100">
+<br />
+    
             
         </div>
     </div>
